# suggester_model

./: Pipfile  README.md  pyproject.toml
api/: main.py  models_loader.py
db/: sailor_db.sqlite
notebooks/: engine_analyze.ipynb  knn_analyze.ipynb  knn_engine_analyze.ipynb  sailor_data_engineer.py  search_suggestion_train.ipynb  svm_analyze.ipynb  svm_engine_analyze.ipynb  term_frequency_test.ipynb  tf_idf_analyze.ipynb  vector_engine_analyze.ipynb  vector_test_engine.py
notebooks/engines/: sailor_data_engineer.py  vector_test_engine.py
sailor/: __init__.py  route_context.py  route_documentor.py  route_specs.py  route_vectorizer.py  sailor_data_engineer.py  sailor_engine.py  vector_sailor_engine.py
sailor/types/: __init__.py  route_context.py  route_specs.py  sailor_engine.py
scripts/: train_model.py
suggester/: __init__.py  route_specs.py  search_data_engineer.py  search_suggestion.py
