[project]
name = "sailor"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorOhashi",email = "victor.ohashi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "openai (>=1.62.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api.main:run"
